site icons e sec recurso

--- a/CodificaLista03/index.html
+++ b/CodificaLista03/index.html
@@ -218,32 +218,68 @@
                         </div>
                     </div>
                 </div>
-                <div class="mudaCorBot"></div>
+                
 
                 <div id="recursos">
                     <h3>Recursos Incluídos:</h3>
-                    <div id="recVidAula">
-                        <p>
-                            Vídeos de Aulas: Acesse vídeos passo a passo para cada módulo do curso.
-                        </p>
-                    </div>
-                    <div id="recExPrat">
-                        <p>
-                            Exercícios Práticos: Exercícios para testar e aplicar seus conhecimentos.
-                        </p>
-                    </div>
-                    <div id="recMatLeit">
-                        <p>
-                            Material de Leitura: E-books e artigos para aprofundamento.
-                        </p>
-                    </div>
-                    <div id="recSuporte">
-                        <p>
-                            Suporte ao Vivo: Sessões de dúvidas ao vivo com instrutores experientes.
-                        </p>
+                    <div class="mudaCorBot"></div>
+                    <div class="bgRec">
+                        <div class="recursosContent">
+                            <div class="recContentItem ">
+                                <div class="recImgDiv">
+                                    <img src="./assets/icons/videoIcon.svg">
+                                </div>
+                                <div class="recContent">
+                                    <p>
+                                        <strong>Vídeos de Aulas!</strong>
+                                    </p>
+                                    <p>
+                                        Acesse vídeos passo a passo para cada módulo do curso.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="recContentItem">
+                                <div class="recImgDiv">
+                                    <img src="./assets/icons/tasksIcon.svg">
+                                </div>
+                                <div class="recContent">
+                                    <p>
+                                        <strong>Exercícios Práticos!</strong>
+                                    </p>
+                                    <p>
+                                        Exercícios para testar e aplicar seus conhecimentos.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="recContentItem">
+                                <div class="recImgDiv">
+                                    <img src="./assets/icons/ebookIcon.svg">
+                                </div>
+                                <div class="recContent">
+                                    <p>
+                                        <strong>Material de Leitura!</strong>
+                                    </p>
+                                    <p>
+                                        E-books e artigos para aprofundamento.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="recContentItem">
+                                <div class="recImgDiv">
+                                    <img src="./assets/icons/supportIcon.svg">
+                                </div>
+                                <div class="recContent">
+                                    <p>
+                                        <strong>Suporte ao Vivo!</strong>
+                                    </p>
+                                    <p>
+                                        Sessões de dúvidas ao vivo com instrutores experientes.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                
             </section>
 
             <section class="sec2">
