--- a/CodificaLista03/index.html
+++ b/CodificaLista03/index.html
@@ -196,7 +196,7 @@
                         </button>
                         <div class="carouselContainer">
                             <ul class="carouselTrack">
-                                <li class="carouselSlide">
+                                <li class="carouselSlide currentSlide">
                                     <img class="carouselImgs" src="./assets/images/carousel1.jpg">
                                 </li>
                                 <li class="carouselSlide">
@@ -219,7 +219,6 @@
                     </div>
                 </div>
                 
-
                 <div id="recursos">
                     <h3>Recursos Incluídos:</h3>
                     <div class="mudaCorBot"></div>
@@ -283,7 +282,6 @@
             </section>
 
             <section class="sec2">
-                <!-- cards e carousel -->
                 <div id="depoimentos">
 
                     <h3 class="tituloDep">Depoimentos de Alunos:</h3>
