site ajuste no css

--- a/CodificaLista03/index.html
+++ b/CodificaLista03/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/media400.css">
+    <link rel="stylesheet" href="./assets/css/media600.css">
+    <link rel="stylesheet" href="./assets/css/media800.css">
+    <link rel="stylesheet" href="./assets/css/mainCarouselFotos.css">
+    <link rel="stylesheet" href="./assets/css/mainConteudoCurso.css">
+    <link rel="stylesheet" href="./assets/css/mainDepoimentos.css">
+    <link rel="stylesheet" href="./assets/css/mainOqAprender.css">
+    <link rel="stylesheet" href="./assets/css/mainPqPython.css">
+    <link rel="stylesheet" href="./assets/css/mainRecursos.css">
 </head>
 <body>
     <button onclick="toTop()" id="btnToTop">
