--- a/CodificaAtividade04/index.html
+++ b/CodificaAtividade04/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PyPath - Home</title>
 
-    <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
@@ -36,9 +33,18 @@
                 <a class="navbar-brand" href="index.html"><span id="logoP">P</span><span id="logoY">y</span><span
                         id="logoPath">Path</span></a>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/info.html">Info+</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/meterias.html">Matérias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/faq.html">FAQ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/contato.html">Contato</a>
@@ -46,22 +52,19 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Detalhes
+                                MultiApps
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="./pages/info.html">Info+</a>
+                                    <a class="dropdown-item" href="./pages/login.html">Login</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="./pages/meterias.html">Matérias</a>
+                                    <a class="dropdown-item" href="./pages/registro.html">Registro</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="./pages/faq.html">FAQ</a>
+                                    <a class="dropdown-item" href="./pages/todo.html">ToDo</a>
                                 </li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/multiapp.html">MultiApps</a>
                         </li>
                     </ul>
                 </div>
@@ -69,145 +72,11 @@
         </nav>
     </header>
     <main>
-        <section class="sectionContainer container-fluid">
-            <div class="container">
-                <div class="row justify-content-md-center">
-                    <div class="col d-md-block">
-                        <div class="row justify-content-md-center">
-                            <div class="col d-md-block">
-                                <h2>Fácil</h2>
-                                <h3>Buscar</h3>
-                                <p>
-                                    Já sabe o que quer escutar? É só procurar e apertar o play.
-                                </p>
-                                <h3>Navegar</h3>
-                                <p>
-                                    Veja os novos lançamentos, o que está bombando nas paradas e
-                                    as melhores playlists para o seu momento.
-                                </p>
-                                <h3>Descobrir</h3>
-                                <p>
-                                    Curta músicas novas toda segunda-feira com uma playlist
-                                    personalizada para você. Ou relaxe e curta uma das rádios.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <section class="info">
+        <section class="pqpython">
             <div class="container">
-                <div class="row d-flex">
-                    <div class="col-md-4 text-white">
-                        <h2>Fácil</h2>
-                        <h3>Buscar</h3>
-                        <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
-                        <h3>Navegar</h3>
-                        <p>
-                            Veja os novos lançamentos, o que está bombando nas paradas e as
-                            melhores playlists para o seu momento.
-                        </p>
-                        <h3>Descobrir</h3>
-                        <p>
-                            Curta músicas novas toda segunda-feira com uma playlist
-                            personalizada para você. Ou relaxe e curta uma das rádios.
-                        </p>
-                    </div>
-                    <div class="col-md-8 d-none d-md-block">
-                        <div class="row divImg">
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="./assets/imagens/iphone1.png" alt="" />
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="./assets/imagens/iphone2.png" alt="" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="sectServ bg-white">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 d-none d-md-block">
-                        <div class="row albuns">
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="./assets/imagens/img1.jpg" />
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="./assets/imagens/img2.jpg" />
-                            </div>
-                        </div>
-                        <div class="row albuns">
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="./assets/imagens/img3.jpg" />
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="./assets/imagens/img4.jpg" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <h2>O que o Spotify tem?</h2>
-                        <h3>Músicas</h3>
-                        <p>
-                            O Spotify tem milhões de músicas. Escute seus sons favoritos,
-                            descubra novas músicas e reúna seus favoritos em um só lugar.
-                        </p>
-                        <h3>Playlists</h3>
-                        <p>
-                            No Spotify você encontra uma playlist para cada momento. Todas
-                            feitas por fanáticos e especialistas de músicas.
-                        </p>
-                        <h3>Novos lançamentos</h3>
-                        <p>
-                            Escute os novos lançamentos de singles e álbuns da semana e veja
-                            o que está bombando no top 50.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="info">
-            <div class="container">
-                <div class="row d-flex">
-                    <div class="col-md-4 text-white">
-                        <h2>Fácil</h2>
-                        <h3>Buscar</h3>
-                        <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
-                        <h3>Navegar</h3>
-                        <p>
-                            Veja os novos lançamentos, o que está bombando nas paradas e as
-                            melhores playlists para o seu momento.
-                        </p>
-                        <h3>Descobrir</h3>
-                        <p>
-                            Curta músicas novas toda segunda-feira com uma playlist
-                            personalizada para você. Ou relaxe e curta uma das rádios.
-                        </p>
-                    </div>
-                    <div class="col-md-8 d-none d-md-block">
-                        <div class="row divImg">
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="./assets/imagens/iphone1.png" alt="" />
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid" src="./assets/imagens/iphone2.png" alt="" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="bg-white">
-            <div class="container">
-                <div class="row justify-content-md-center">
-                    <div class="col-md-10 d-md-block">
+                <div class="row d-flex justify-content-md-center">
+                    <div class="col-md-10 text-white">
                         <h2>Por que estudar Python?</h2>
                         <p>
                             Python é uma linguagem de programação versátil, fácil de
@@ -219,6 +88,15 @@
                             aceleram o desenvolvimento de projetos, desde scripts simples
                             até aplicações complexas.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="utilizadoCards bg-white">
+            <div class="container">
+                <div class="row justify-content-md-center">
+                    <div class="col-md-10">
 
                         <h3>No que Python é e pode ser utilizado?</h3>
 
@@ -256,6 +134,26 @@
                             aplicações de desktop e ferramentas de software diversas.
                         </p>
 
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="carouselImgs">
+            <div class="container">
+                <div class="row d-flex justify-content-md-center">
+                    <div class="col-md-10 text-white">
+                        <h2>Carousel de Imgs</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="resumoMaterias bg-white">
+            <div class="container">
+                <div class="row justify-content-md-center">
+                    <div class="col-md-10">
+                        
                         <h2>Breve introdução as matérias!</h2>
                         <h3>1. Introdução ao Python e Configuração do Ambiente</h3>
                         <p>
@@ -307,8 +205,17 @@
                             Aplique todo o conhecimento adquirido ao longo do curso em um
                             projeto final prático e abrangente.
                         </p>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
 
-                        <h2>Depoimentos de alunos e professores do curso</h2>
+        <section class="depoimentos">
+            <div class="container">
+                <div class="row d-flex justify-content-md-center">
+                    <div class="col-md-10 text-black">
+                        <!-- <h2>Depoimentos de alunos e professores do curso</h2> -->
                         <h3>Alunos</h3>
                         <p>
                             João Silva "Antes de começar o curso, eu não tinha experiência
@@ -370,7 +277,16 @@
                             prática e eficiente."
                         </p>
 
-                        <h2>Recursos Incluídos:</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="recursos bg-white">
+            <div class="container">
+                <div class="row justify-content-md-center">
+                    <div class="col-md-8">
+                        <h3>Recursos Incluídos:</h3>
                         <p>
                             Vídeos de Aulas! Acesse vídeos passo a passo para cada módulo do
                             curso.
@@ -389,51 +305,42 @@
             </div>
         </section>
 
-        <section class="infoSite">
-            <div class="divConteudoSite"></div>
-        </section>
     </main>
-    <footer class="position-absolute w-100">
+    <footer class="position-absolute w-100 bg-white">
         <div class="container">
-            <div class="row">
-                <div class="d-sm-flex d-lg-block justify-content-center col-md-12 col-lg-2">
-                    <h4>Atividade 4 - Ricardo D. Muenchen</h4>
-                </div>
-                <div class="col-sm-12 col-lg-4">
-                    <ul class="d-flex justify-content-center justify-content-lg-end">
-                        <li>
-                            <a href="">
-                                <img src="./assets/icons/facebook.png" alt="" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./assets/icons/twitter.png" alt="" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="./assets/icons/instagram.png" alt="" />
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+          <div class="row justify-content-center">
+            <hr>
+            <div class="d-sm-flex d-lg-block justify-content-center col-md-12 col-lg-2">
+              <h4>Atividade 4</h4>
+              <h4>Ricardo Muenchen</h4>
             </div>
+            <div class="col-sm-12 col-lg-4">
+              <ul class="d-flex justify-content-center justify-content-lg-end">
+                <li>
+                  <a href="">
+                    <img src="./assets/icons/facebook.png" alt="" />
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <img src="./assets/icons/twitter.png" alt="" />
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <img src="./assets/icons/instagram.png" alt="" />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
     </footer>
-
-    <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/carouselFotos.js"></script>
-    <script src="./assets/js/perguntasFrequentes.js"></script>
-    <script src="./assets/js/contato.js"></script>
-    <script src="./assets/js/formularioInscricao.js"></script>
-
-    <script src="./assets/js/swiper-bundle.min.js"></script>
-    <script src="./assets/js/depoimentos.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-</body>
+    <script src="./assets/js/main.js"></script>
 
+</body>
 </html>
