--- a/CodificaAtividade04/pages/faq.html
+++ b/CodificaAtividade04/pages/faq.html
@@ -21,7 +21,7 @@
     <img src="../assets/icons/backtotop.jpg" id="toTopImg" />
   </button>
   <header>
-    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar fixed-top navbar-expand-lg bg-white border shadow-sm">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
           aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="info.html">Info+</a>
+              <a class="nav-link" href="info.html">Informações</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="meterias.html">Matérias</a>
@@ -69,41 +69,38 @@
     </nav>
   </header>
   <main>
-    <section class="bg-white faqSection">
-      <div class="sticky-top bg-white py-3 w-100 mb-4 px-5">
-        <hr>
+    <section class="bg-light faqSection">
+      <div class="sticky-top bg-light py-3 w-100 mb-4 px-5 border">
         <div class="d-flex align-items-center justify-content-between px-5">
-        <h2 class="mb-0"><span class="d-none d-md-block">Perguntas Frequentes</span> <span class="d-md-none d-block">FAQ</span></h2>
-        <select id="faq-select" class="form-select mx-3" onchange="toQuestion()">
-          <option value="">Selecione uma pergunta...</option>
-          <option value="duracao">Qual é a duração do curso?</option>
-          <option value="experiencia">Preciso ter experiência prévia em programação?</option>
-          <option value="online">O curso é totalmente online?</option>
-          <option value="certificado">Receberei um certificado ao concluir o curso?</option>
-          <option value="requisitos">Quais são os requisitos técnicos para acompanhar o curso?</option>
-          <option value="suporte">Como funciona o suporte durante o curso?</option>
-          <option value="projeto">Há algum projeto prático no curso?</option>
-          <option value="ritmo">Posso fazer o curso no meu próprio ritmo?</option>
-          <option value="conteudo">Posso acessar o conteúdo do curso após a conclusão?</option>
-          <option value="custo">Há algum custo adicional para o material do curso?</option>
-          <option value="idiomas">O curso oferece suporte em outras línguas?</option>
-          <option value="pagamento">Quais são as formas de pagamento aceitas?</option>
-          <option value="cancelar">Posso cancelar minha inscrição e obter um reembolso?</option>
-          <option value="avaliacao">Como são avaliadas as atividades do curso?</option>
-          <option value="comunidade">Há uma comunidade de alunos e ex-alunos?</option>
-          <option value="emprego">O curso oferece alguma garantia de emprego?</option>
-          <option value="desconto">Há descontos para grupos ou empresas?</option>
-          <option value="progresso">Como posso acompanhar meu progresso no curso?</option>
-          <option value="certificacoes">O curso cobre preparação para certificações de Python?</option>
-          <option value="interacao">Posso interagir com os instrutores durante o curso?</option>
-        </select>
-      </div>
+          <h2 class="mb-0"><span class="d-none d-md-block">Perguntas Frequentes</span> <span class="d-md-none d-block">FAQ</span></h2>
+          <select id="faq-select" class="form-select mx-3" onchange="toQuestion()">
+            <option value="">Selecione uma pergunta...</option>
+            <option value="duracao">Qual é a duração do curso?</option>
+            <option value="experiencia">Preciso ter experiência prévia em programação?</option>
+            <option value="online">O curso é totalmente online?</option>
+            <option value="certificado">Receberei um certificado ao concluir o curso?</option>
+            <option value="requisitos">Quais são os requisitos técnicos para acompanhar o curso?</option>
+            <option value="suporte">Como funciona o suporte durante o curso?</option>
+            <option value="projeto">Há algum projeto prático no curso?</option>
+            <option value="ritmo">Posso fazer o curso no meu próprio ritmo?</option>
+            <option value="conteudo">Posso acessar o conteúdo do curso após a conclusão?</option>
+            <option value="custo">Há algum custo adicional para o material do curso?</option>
+            <option value="idiomas">O curso oferece suporte em outras línguas?</option>
+            <option value="pagamento">Quais são as formas de pagamento aceitas?</option>
+            <option value="cancelar">Posso cancelar minha inscrição e obter um reembolso?</option>
+            <option value="avaliacao">Como são avaliadas as atividades do curso?</option>
+            <option value="comunidade">Há uma comunidade de alunos e ex-alunos?</option>
+            <option value="emprego">O curso oferece alguma garantia de emprego?</option>
+            <option value="desconto">Há descontos para grupos ou empresas?</option>
+            <option value="progresso">Como posso acompanhar meu progresso no curso?</option>
+            <option value="certificacoes">O curso cobre preparação para certificações de Python?</option>
+            <option value="interacao">Posso interagir com os instrutores durante o curso?</option>
+          </select>
+        </div>
       </div>
       <div class="container">
-        <div class="row justify-content-md-center">
-          
+        <div class="row justify-content-md-center">  
           <div class="col-md-10 d-md-block">
-            
 
             <h3 id="duracao">Qual é a duração do curso?</h3>
             <p>
@@ -254,10 +251,9 @@
       <div class="divConteudoSite"></div>
     </section>
   </main>
-  <footer class="position-absolute w-100 bg-white">
+  <footer class="position-absolute w-100 bg-white border shadow-sm">
     <div class="container">
       <div class="row justify-content-center">
-        <hr>
         <div class="d-sm-flex d-lg-block justify-content-center col-md-12 col-lg-2">
           <h4>Atividade 4</h4>
           <h4>Ricardo Muenchen</h4>
