--- a/CodificaAtividade04/pages/registro.html
+++ b/CodificaAtividade04/pages/registro.html
@@ -15,8 +15,11 @@
 
 </head>
 <body>
+  <button onclick="toTop()" id="btnToTop">
+    <img src="../assets/icons/backtotop.jpg" id="toTopImg" />
+  </button>
     <header>
-        <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-white border shadow-sm">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,7 +31,7 @@
                     <a class="nav-link" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="info.html">Info+</a>
+                    <a class="nav-link" href="info.html">Informações</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="meterias.html">Matérias</a>
@@ -68,7 +71,35 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="position-absolute w-100 bg-white border shadow-sm">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="d-sm-flex d-lg-block justify-content-center col-md-12 col-lg-2">
+            <h4>Atividade 4</h4>
+            <h4>Ricardo Muenchen</h4>
+          </div>
+          <div class="col-sm-12 col-lg-4">
+            <ul class="d-flex justify-content-center justify-content-lg-end">
+              <li>
+                <a href="">
+                  <img src="../assets/icons/facebook.png" alt="" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="../assets/icons/twitter.png" alt="" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="../assets/icons/instagram.png" alt="" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../assets/js/main.js"></script>
